# tutorials

./: .gitattributes  README.md
.fast/: meta.yaml  meta.yml
1. get_started/1. fast_and_shell/: Fastfile
1. get_started/2. docker_shell/: Fastfile
1. get_started/3. goals/: Fastfile
1. get_started/4. cli_documentation/: Fastfile
fast-pyapp/: Fastfile  README.md
fast-pyapp/.fast/: meta.yml
fast-pyapp/app/admin/: README.md
fast-pyapp/app/api/: main.py
fast-pyapp/app/api/dtos/: user.py
fast-pyapp/app/api/models/: __init__.py  user.py
fast-pyapp/app/api/repositories/: UserRepository.py  __init__.py  memory.py
fast-pyapp/app/api/routers/v1/: default.py  users.py
fast-pyapp/app/api/usecases/: __init__.py  users.py
fast-pyapp/app/tests/functional/collections/: automated-crud-tests.json
fast-pyapp/app/tests/integration/: __init__.py
fast-pyapp/app/tests/integration/repositories/: test_repository.py
fast-pyapp/app/tests/integration/routers/: test_default.py  test_users.py
fast-pyapp/app/tests/unit/: __init__.py
fast-pyapp/devops/: Dockerfile  docker-compose.yml  pyproject.toml
get_started/core_language/: Fastfile
